--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><h1></h1>
      <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=0"/>
-<link href="projet2.css" rel="stylesheet">
+<link href="main.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,498;1,498&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
