Update2 index.html
filtre icone et rechercher

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head><h1></h1>
      <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=0"/>
-<link href="main.css" rel="stylesheet">
+<link href="projet2.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,498;1,498&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -26,7 +26,7 @@
      <h2>Trouvez votre hébergement pour vos vacances de rêve</h2>
      <p>En plein centre-ville ou en pleine nature</p>
      
-     <div class="Bordurerecherche centreflex">
+     <div class="Bordurerecherche leftflex">
       <div class="tailleicone centreflex fontgris left"><i class="fa-solid fa-location-dot"></i></div>
       <div>
           <input class="recherche centreflex nonebordure paddingrecherche" type="search" placeholder="Marseille, France"/>
@@ -37,22 +37,22 @@
      <div class="filtre margefiltre">
        <div class="margefiltretitre"><h3>Filtres</h3></div>
        <div class="filtretexteicon entreflex">
-          <i class="fa-solid fa-money-bill-wave filtreicon"></i>
+          <i class="fa-solid fa-money-bill-wave centreflex"></i>
           <div class="filtretexte centreflex"></i>Economique</div>
        </div>
 
       <div class="filtretexteicon entreflex">
-          <i class="fa-solid fa-child filtreicon centreflex"></i>
+          <i class="fa-solid fa-child centreflex"></i>
           <div class="filtretexte centreflex">Familial</div>
       </div>
 
       <div class="filtretexteicon entreflex">
-          <i class="fa-solid fa-heart filtreicon centreflex"></i>
+          <i class="fa-solid fa-heart centreflex"></i>
           <div class="filtretexte centreflex">Romantique</div>
       </div>
 
       <div class="filtretexteicon entreflex">
-          <i class="fa-solid fa-fire filtreicon centreflex"></i>
+          <i class="fa-solid fa-fire centreflex"></i>
           <div class="filtretexte centreflex">Nos pépites</div>
       </div>
      </div>
@@ -178,4 +178,3 @@
 
 </body>
 </html>
-
