Update3 index.html
padding icone et coloration icone

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head><h1></h1>
+<head>
+     <title>Site2</title>
      <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=0"/>
 <link href="main.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -27,32 +28,32 @@
      <p>En plein centre-ville ou en pleine nature</p>
      
      <div class="Bordurerecherche leftflex">
-      <div class="tailleicone centreflex fontgris left"><i class="fa-solid fa-location-dot"></i></div>
+      <div class="tailleicone centreflex fontgris left"><i class="fa-solid fa-location-dot paddingicone"></i></div>
       <div>
           <input class="recherche centreflex nonebordure paddingrecherche" type="search" placeholder="Marseille, France"/>
       </div>
-      <div class="fontbleu centreflex boutonrecherche">Rechercher</div>
+      <div class="fontbleu centreflex boutonrecherche paddingrechercher">Rechercher</div>
      </div>
 
      <div class="filtre margefiltre">
        <div class="margefiltretitre"><h3>Filtres</h3></div>
        <div class="filtretexteicon entreflex">
-          <i class="fa-solid fa-money-bill-wave centreflex"></i>
+          <i class="fa-solid fa-money-bill-wave centreflexx filtreicon"></i>
           <div class="filtretexte centreflex"></i>Economique</div>
        </div>
 
       <div class="filtretexteicon entreflex">
-          <i class="fa-solid fa-child centreflex"></i>
+          <i class="fa-solid fa-child centreflexx filtreicon"></i>
           <div class="filtretexte centreflex">Familial</div>
       </div>
 
       <div class="filtretexteicon entreflex">
-          <i class="fa-solid fa-heart centreflex"></i>
+          <i class="fa-solid fa-heart centreflexx filtreicon"></i>
           <div class="filtretexte centreflex">Romantique</div>
       </div>
 
       <div class="filtretexteicon entreflex">
-          <i class="fa-solid fa-fire centreflex"></i>
+          <i class="fa-solid fa-fire centreflexx filtreicon"></i>
           <div class="filtretexte centreflex">Nos pépites</div>
       </div>
      </div>
