--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
      <title>Site2</title>
      <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=0"/>
-<link href="main.css" rel="stylesheet">
+<link href="projet2.css" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,498;1,498&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -32,7 +32,7 @@
       <div>
           <input class="recherche centreflex nonebordure paddingrecherche" type="search" placeholder="Marseille, France"/>
       </div>
-      <div class="fontbleu centreflex boutonrecherche paddingrechercher">Rechercher</div>
+      <div class="fontbleu centreflex boutonrecherche">Rechercher</div>
      </div>
 
      <div class="filtre margefiltre">
@@ -61,7 +61,7 @@
     <div class="flexinfo"><i class="fa-solid fa-info margeinfo borderinfo"></i><p>Plus de 500 logements disponibles dans cette ville</p></div>
 
 
-<section class="aroundflex">
+<section class="bloccarte">
      <div class="autourcolonneflex taillehebergement fontgris hebergementbloc">
 
      <h3>Hébergements à Marseille</h3>
@@ -179,3 +179,4 @@
 
 </body>
 </html>
+
