--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
      </div>
 </section>
-    <div class="flexinfo"><i class="fa-solid fa-info margeinfo borderinfo"></i><p>Plus de 500 logements disponibles dans cette ville</p></div>
+    <div class="info"> <div class="parenticon centreflex"><i class="fa-solid fa-info margeinfo borderinfo filtreicon"></i></div><p>Plus de 500 logements disponibles dans cette ville</p></div>
 
 
 <section class="bloccarte">
@@ -99,14 +99,14 @@
       </div></div></div>
 
      <div class="cubehebergement"> <div class="img6"></div>
-     <h3>Auberge Le Panier</h3><p>Nuit à partir de 23 euros</p><div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i></div></div></div></div>
+     <h3>Auberge Le Panier</h3><p>Nuit à partir de 23 euros</p><div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div></div></div></div>
 
       <p class="gras">Afficher plus</p></div>
 
 <div class="taillepopulaire blocpopulaire fontgris">
      <div class="entreflex">
      <h2 class="gras">Les plus populaires</h2>
-     <div><i class="fa-solid fa-chart-line"></i></div>
+     <div><i class="fa-solid fa-chart-line filtreicon"></i></div>
 
    <div class="autourcolonneflex">
     <div class="centreflex cubepopulaire blocpopulaire2">
@@ -137,17 +137,17 @@
   
   <div class="cubeactivité centrecolonneflex">
      <div class="img11"></div>   
-         <div> <h3 class="heighttitre titreactivité"><h3>Fort de Pomègues</h3></div>
+         <div> <h3 class="heighttitre titreactivité">Fort de Pomègues</h3></div>
   </div>
 
   <div class="cubeactivité centrecolonneflex">
      <div class="img12"></div>  
-          <div> <h3 class="heighttitre titreactivité"><h3>Parc national des Calanques</h3></div>
+          <div> <h3 class="heighttitre titreactivité">Parc national des Calanques</h3></div>
   </div>
 
   <div class="cubeactivité centrecolonneflex">
      <div class="img13"></div>   
-          <div> <h3 class="heighttitre titreactivité"><h3>Notre-Dame-de-la-Garde</h3></div>
+          <div> <h3 class="heighttitre titreactivité">Notre-Dame-de-la-Garde</h3></div>
   </div>
 
 </div>
