--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <h2>Trouvez votre hébergement pour vos vacances de rêve</h2>
      <p>En plein centre-ville ou en pleine nature</p>
      
-     <div class="Bordurerecherche leftflex">
+     <div class="Bordurerecherche leftt">
       <div class="tailleicone centreflex fontgris left"><i class="fa-solid fa-location-dot paddingicone"></i></div>
       <div>
           <input class="recherche centreflex nonebordure paddingrecherche" type="search" placeholder="Marseille, France"/>
@@ -64,42 +64,42 @@
 <section class="bloccarte">
      <div class="autourcolonneflex taillehebergement fontgris hebergementbloc">
 
-     <h3>Hébergements à Marseille</h3>
+     <h3 class="leftflex">Hébergements à Marseille</h3>
      <div class="bloc1 entreflex">
      <div class="cubehebergement">
      <div class="img1"></div>
        <div class="cubehebergementdetail">
           <h3>Hôtel du port</h3><p>Nuit à partir de 52euros</p>
-          <div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i></div>
+          <div><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-regular fa-star filtreicon"></i></div>
      </div></div>
 
      <div class="cubehebergement">
       <div class="img2"></div>
         <div class="cubehebergementdetail">
-     <h3>Hôtel Chez Amina</h3><p>Nuit à partir de 96 euros</p><div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+     <h3>Hôtel Chez Amina</h3><p>Nuit à partir de 96 euros</p><div><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-starfiltreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-regular fa-star filtreicon"></i>
      </div></div></div>
 
      <div class="cubehebergement">
      <div class="img3"></div>
        <div class="cubehebergementdetail">
-     <h3>Hôtel Les mouettes</h3><p>Nuit à partir de 76 euros</p><div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+     <h3>Hôtel Les mouettes</h3><p>Nuit à partir de 76 euros</p><div><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-regular fa-star filtreicon"></i>
      </div></div></div></div>
 
      <div class="bloc2 entreflex">
      <div class="cubehebergement">
      <div class="img4"></div>
        <div class="cubehebergementdetail">
-     <h3>Hôtel de la mer</h3><p>Nuit à partir de 46 euros</p><div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+     <h3>Hôtel de la mer</h3><p>Nuit à partir de 46 euros</p><div><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-regular fa-star filtreicon"></i>
      </div></div></div>
 
      <div class="cubehebergement">
      <div class="img5"></div>
      <div class="cubehebergementdetail">
-     <h3>Auberge La Canebière</h3><p>Nuit à partir de 25 euros</p><div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i>
+     <h3>Auberge La Canebière</h3><p>Nuit à partir de 25 euros</p><div><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-regular fa-star filtreicon"></i>
       </div></div></div>
 
      <div class="cubehebergement"> <div class="img6"></div>
-     <h3>Auberge Le Panier</h3><p>Nuit à partir de 23 euros</p><div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div></div></div></div>
+     <h3>Auberge Le Panier</h3><p>Nuit à partir de 23 euros</p><div><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i></div></div></div></div>
 
       <p class="gras">Afficher plus</p></div>
 
@@ -112,21 +112,21 @@
     <div class="centreflex cubepopulaire blocpopulaire2">
      <div class="img7"></div>
      <div class="cubepopulairedetail">
-     <h3>Hôtel le soleil du matin</h3><p>Nuit à partir de 25euros</p><div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i></div></div></div>
+     <h3>Hôtel le soleil du matin</h3><p>Nuit à partir de 25euros</p><div><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-regular fa-star filtreicon"></i></div></div></div>
 
    <div class="centreflex cubepopulaire blocpopulaire2">
      <div class="img8"></div>
      <div class="cubepopulairedetail"><h3>Chambre d'hôtes Au coeur de l'eau</h3><p>Nuit à partir de 71 euros</p>
-     <div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i></div></div>
+     <div><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-regular fa-star filtreicon"></i></div></div>
 
   <div class="centreflex cubepopulaire">
      <div class="img9"></div>
      <div class="cubepopulairedetail"><h3>Hôtel Bleu et Blanc</h3><p>Nuit à partir de 68 euros</p>
-     <div><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i></div></div></div>
+     <div><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-solid fa-star filtreicon"></i><i class="fa-regular fa-star filtreicon"></i></div></div></div>
 </div>
 </section>
 <section class="activité">
-     <h2>Activités à Marseille</h2>
+     <h2 class="titreh2activité">Activités à Marseille</h2>
 
 <div class="blocactivité entreflex">
 
@@ -179,4 +179,5 @@
 
 </body>
 </html>
+
 
