--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Site2</title>
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=0"/>
 		<link href="main.css" rel="stylesheet">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
