--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                          </div>
                          <div class="filtretexteicon entreflex">
                               <i class="fa-solid fa-money-bill-wave centreflexx filtreicon"></i>
-                              <div class="filtretexte centreflex"></i>
+                              <div class="filtretexte centreflex">
                               Economique
                          </div>
                     </div>
@@ -185,7 +185,6 @@
                <p class="gras">
                     Afficher plus
                </p>
-          </div>
           <div class="taillepopulaire blocpopulaire fontgris">
                <div class="entreflex pluspopulaire">
                     <h2 class="gras">Les plus populaires<i class="fa-solid fa-chart-line filtreicon margeiconepopulaire"></i></h2>
@@ -223,7 +222,8 @@
                                         <i class="fa-regular fa-star filtreicon"></i>
                                    </div>
                               </div>
-                              <div class="centreflex cubepopulaire">
+                         </div>    
+                         <div class="centreflex cubepopulaire">
                                    <div class="img9"></div>
                                    <div class="cubepopulairedetail">
                                         <h3>Hôtel Bleu et Blanc</h3>
@@ -238,9 +238,11 @@
                                              <i class="fa-regular fa-star filtreicon"></i>
                                         </div>
                                    </div>
-                              </div>
                          </div>
-                    </section>
+                    </div>
+               </div>
+          </div>
+                   </section>
                     <section class="activité">
                          <h2 class="titreh2activité">Activités à Marseille</h2>
                          <div class="blocactivité entreflex">
@@ -271,7 +273,7 @@
                          </div>
                     </section>
                     <footer>
-                         <div class="footer fontgris entreflex" >
+                         <div class="footer fontgris entreflex">
                               <div class="heightblocfoot  marginblocfoot1">
                                    <h3>A propos</h3>
                                    <div class="divlienfoot">
@@ -305,5 +307,3 @@
                          </footer>
                     </body>
                </html>
-
-
