--- a/index.html
+++ b/index.html
@@ -181,10 +181,11 @@
                               </div>
                          </div>
                     </div>
-               </div>
-               <p class="gras">
+                    <p class="gras margeafficherplus">
                     Afficher plus
                </p>
+
+               </div>
           <div class="taillepopulaire blocpopulaire fontgris">
                <div class="entreflex pluspopulaire">
                     <h2 class="gras">Les plus populaires<i class="fa-solid fa-chart-line filtreicon margeiconepopulaire"></i></h2>
@@ -223,7 +224,7 @@
                                    </div>
                               </div>
                          </div>    
-                         <div class="centreflex cubepopulaire">
+                         <div class="centreflex cubepopulaire blocpopulaire">
                                    <div class="img9"></div>
                                    <div class="cubepopulairedetail">
                                         <h3>Hôtel Bleu et Blanc</h3>
