--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                               <div class="cubehebergementdetail">
                                    <h3>Hôtel du port</h3>
                                    <p>
-                                        Nuit à partir de 52euros
+                                        Nuit à partir de 52€
                                    </p>
                                    <div>
                                         <i class="fa-solid fa-star filtreicon"></i>
@@ -106,7 +106,7 @@
                               <div class="cubehebergementdetail">
                                    <h3>Hôtel Chez Amina</h3>
                                    <p>
-                                        Nuit à partir de 96 euros
+                                        Nuit à partir de 96€
                                    </p>
                                    <div>
                                         <i class="fa-solid fa-star filtreicon"></i>
@@ -122,7 +122,7 @@
                               <div class="cubehebergementdetail">
                                    <h3>Hôtel Les mouettes</h3>
                                    <p>
-                                        Nuit à partir de 76 euros
+                                        Nuit à partir de 76€
                                    </p>
                                    <div>
                                         <i class="fa-solid fa-star filtreicon"></i>
@@ -140,7 +140,7 @@
                               <div class="cubehebergementdetail">
                                    <h3>Hôtel de la mer</h3>
                                    <p>
-                                        Nuit à partir de 46 euros
+                                        Nuit à partir de 46€
                                    </p>
                                    <div>
                                         <i class="fa-solid fa-star filtreicon"></i>
@@ -156,7 +156,7 @@
                               <div class="cubehebergementdetail">
                                    <h3>Auberge La Canebière</h3>
                                    <p>
-                                        Nuit à partir de 25 euros
+                                        Nuit à partir de 25€
                                    </p>
                                    <div>
                                         <i class="fa-solid fa-star filtreicon"></i>
@@ -171,7 +171,7 @@
                               <div class="img6"></div>
                               <h3>Auberge Le Panier</h3>
                               <p>
-                                   Nuit à partir de 23 euros
+                                   Nuit à partir de 23€
                               </p>
                               <div>
                                    <i class="fa-solid fa-star filtreicon"></i>
@@ -197,7 +197,7 @@
                               <div class="cubepopulairedetail">
                                    <h3>Hôtel le soleil du matin</h3>
                                    <p>
-                                        Nuit à partir de 25euros
+                                        Nuit à partir de 25€
                                    </p>
                                    <div>
                                         <i class="fa-solid fa-star filtreicon"></i>
@@ -213,7 +213,7 @@
                               <div class="cubepopulairedetail">
                                    <h3>Chambre d'hôtes Au coeur de l'eau</h3>
                                    <p>
-                                        Nuit à partir de 71 euros
+                                        Nuit à partir de 71€
                                    </p>
                                    <div>
                                         <i class="fa-solid fa-star filtreicon"></i>
@@ -229,7 +229,7 @@
                                    <div class="cubepopulairedetail">
                                         <h3>Hôtel Bleu et Blanc</h3>
                                         <p>
-                                             Nuit à partir de 68 euros
+                                             Nuit à partir de 68€
                                         </p>
                                         <div>
                                              <i class="fa-solid fa-star filtreicon"></i>
