--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
                               </div>
                          </div>
                     </div>
-                    <p class="gras margeafficherplus">
+                   <a href="#" class="decoration lienfoot liencouleur gras margeafficherplus">
                     Afficher plus
-               </p>
+               </a>
 
                </div>
           <div class="taillepopulaire blocpopulaire fontgris">
