--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,498;1,498&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
           <script src="https://kit.fontawesome.com/7fce18f105.js" crossorigin="anonymous"></script>
      </head>
-     <body>
+     <body class="container"> 
           <header>
                <nav class="taillenav">
                     <div class="entreflex">
@@ -75,7 +75,7 @@
           </section>
           <div class="info">
                <div class="parenticon centreflex">
-                    <i class="fa-solid fa-info margeinfo borderinfo filtreicon"></i>
+                    <i class="fa-solid fa-info margeinfo borderinfo"></i>
                </div>
                <p>
                     Plus de 500 logements disponibles dans cette ville
@@ -305,6 +305,7 @@
                                         <a href="#" class="decoration lienfoot liencouleur">Nous contacter</a>
                                    </div>
                               </div>
-                         </footer>
+                         </footer>            
                     </body>
                </html>
+
