--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                          <div>
                               <input class="recherche centreflex nonebordure paddingrecherche" type="search" placeholder="Marseille, France"/>
                          </div>
-                         <div class="fontbleu centreflex boutonrecherche">
+                         <div class="fontbleu centreflexx boutonrecherche">
                               Rechercher
                          </div>
                     </div>
