--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                               <i class="fa-solid fa-location-dot paddingicone"></i>
                          </div>
                          <div>
-                              <input class="recherche centreflex nonebordure paddingrecherche" type="search" placeholder="Marseille, France"/>
+                              <input class="recherche centreflex borduregris paddingrecherche" type="search" placeholder="Marseille, France"/>
                          </div>
                          <div class="fontbleu centreflexx boutonrecherche">
                               Rechercher
@@ -74,7 +74,7 @@
                </div>
           </section>
           <div class="info">
-               <div class="parenticon centreflex">
+               <div class="centreflex">
                     <i class="fa-solid fa-info margeinfo borderinfo"></i>
                </div>
                <p>
@@ -188,7 +188,8 @@
                </div>
         <div class="taillepopulaire blocpopulaire fontgris">
                <div class="entreflex pluspopulaire">
-                    <h2 class="gras">Les plus populaires<i class="fa-solid fa-chart-line filtreicon margeiconepopulaire"></i></h2>
+                    <h2 class="gras margepluspopulaire">Les plus populaires</h2>
+                    <i class="fa-solid fa-chart-line filtreicon margeiconepopulaire"></i>
                     
                
                     <div class="autourcolonneflex">
@@ -308,4 +309,3 @@
                          </footer>            
                     </body>
                </html>
-
