--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                <nav class="taillenav">
                     <div class="entreflex">
                          <div class="logomarge">
-                              <a href="index.html"><img src="Booki.jpg" alt="logobooki"></a>
+                              <a href="projet2.html"><img src="Booki.jpg" alt="logobooki"></a>
                          </div>
                          <div class="taillelien autourflex">
                               <div class="tailleliens centreflex bordurenav ">
@@ -74,7 +74,7 @@
           </section>
           <div class="info">
                <div class="centreflex">
-                    <i class="fa-solid fa-info margeinfo borderinfo"></i>
+                    <i class="fa-solid fa-info iconeinfo margeinfo filtreicon borderinfo"></i>
                </div>
                <p>
                     Plus de 500 logements disponibles dans cette ville
